--- a/index.html
+++ b/index.html
@@ -417,11 +417,11 @@
         <div class="row d-flex">
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="https://sumanbar721232.github.io/Instakart_Ecommerce_WebShop/" class="block-20 zoom-effect" style="background-image: url('images/Ok_1.jpeg');">
+              <a href="https://sumanbar6296.github.io/MyINSTAKART_EcomWEB/" class="block-20 zoom-effect" style="background-image: url('images/Ok_1.jpeg');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/SuMaNbAr721232/InstaKart_E-commersWebsite">"Instakart" My E-Commerce WebApplication</a></h3>
+                <h3 class="heading"><a href="https://github.com/SuMaNbAr6296/MyINSTAKART_EcomWEB">"Instakart" My E-Commerce WebApplication</a></h3>
                 <p>This is a E-Commerce WebApplication which is made with HTML-CSS JAVASCRIPT-PHP and MYSQL database with base on apache WebServer. </p>
 				<p>
 					The aim of the project is to provide its users tailor-made recommendations
@@ -435,11 +435,11 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="https://sumanbar721232.github.io/My_S-Grocery-Shop-Organical-webapp/" class="block-20 zoom-effect" style="background-image: url('images/Ok_2.png');">
+              <a href="https://sumanbar6296.github.io/My_GroceryShop_web/" class="block-20 zoom-effect" style="background-image: url('images/Ok_2.png');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/SuMaNbAr721232/My_S-Grocery-Shop-Organical-webapp">"S Grocery Shop" Website for biginner</a></h3>
+                <h3 class="heading"><a href="https://github.com/SuMaNbAr6296/My_GroceryShop_web">"S Grocery Shop" Website for biginner</a></h3>
                 <p>This is a Grocery shop frontend WebApplication which is made with HTML-CSS-JAVASCRIPT.</p>
 				<p>Created a visually appealing and intuitive grocery shop interface, optimizing user experience and reducing cart abandonment rate by 15% within the first month of launch.
 				   implemented user-friendly features resulting increase in customer engagement and boost in online sales revenue.
@@ -449,11 +449,11 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry">
-              <a href="https://sumanbar721232.github.io/FFkart.github.io/" class="block-20 zoom-effect" style="background-image: url('images/Ok_3.jpeg');">
+              <a href="https://sumanbar6296.github.io/FFkartClone_Website/" class="block-20 zoom-effect" style="background-image: url('images/Ok_3.jpeg');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/SuMaNbAr721232/FFkart.github.io">Student Registration Form for Beginners</a></h3>
+                <h3 class="heading"><a href="https://github.com/SuMaNbAr6296/FFkartClone_Website">Student Registration Form for Beginners</a></h3>
                 <p>This student registration form project demonstrates the integration of HTML, CSS, and JavaScript to create a functional and aesthetically pleasing web form. It highlights the importance of user-friendly design and robust validation mechanisms in web development.</p>
               </div>
             </div>
@@ -507,7 +507,7 @@
 						<h2>More projects on<span> Github  </span> </h2>
 						<div class="heading"> <h4> I love to solve business problems &amp; uncover hidden data stories </h4>
 						<br>
-						<p><a href="https://github.com/SuMaNbAr721232" class="btn btn-primary py-3 px-5">GitHub</a></p>
+						<p><a href="https://github.com/SuMaNbAr6296" class="btn btn-primary py-3 px-5">GitHub</a></p>
 						</div>
 					</div>
 				</div>
