--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 									  <div class="about-info">
 										<p><span class="title-s">Name: </span> <span>Suman Bar</span></p>
 										<p><span class="title-s">Job Role: </span> <span>Software Engineer</span></p>
-										<p><span class="title-s">Experience: </span> <span>0 years(Fresher)</span></p>
+										<p><span class="title-s">Experience: </span> <span>EntryLevel Web Developer</span></p>
 										<p><span class="title-s">Address: </span> <span>Kolkata, West Bengal, India</span></p>
 									  </div>
 									</div>
@@ -247,7 +247,7 @@
 											aria-valuemax="100"></div>
 									</div>
 									
-									<span>PHP</span> <span class="pull-right">60%</span>
+									<span>Javascript</span> <span class="pull-right">60%</span>
 									<div class="progress">
 										<div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0"
 											aria-valuemax="100"></div>
@@ -265,7 +265,7 @@
 											aria-valuemax="100"></div>
 									</div>
 
-									<span>JavaScript</span> <span class="pull-right"> 60%</span>
+									<span>React.js</span> <span class="pull-right"> 60%</span>
 									<div class="progress">
 										<div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="60" aria-valuemin="0"
 											aria-valuemax="100"></div>
@@ -294,8 +294,8 @@
 								<h1 class="big">About</h1>
 								<h2 class="mb-4">About Me</h2>
 
-								<p> I completed my B.Tech in Information Technology, which provided me with a strong foundation in software development, programming, and problem-solving. Although I’m currently working in a Business Development Executive (BDE) role, I’ve realized that my passion lies in software development.</p>
-								<p> While my experience in BDE has helped me develop strong communication, client interaction, and analytical skills, I’ve continued working on coding projects in my free time and enhancing my technical skills. I’m keen on transitioning to software development because it aligns more closely with 
+								<p> I completed my B.Tech in Information Technology, which provided me with a strong foundation in software development, programming, and problem-solving. Although I worked on a Web Developer role, I’ve realized that my passion lies in software development.</p>
+								<p> While my Entry Level experience in web Development has helped me develop strong communication, client interaction, and analytical skills, I’ve continued working on coding projects in my free time and enhancing my technical skills. I’m keen on transitioning to software development because it aligns more closely with 
 									my educational background and long-term career goals. I believe my technical knowledge, combined with the business insights I’ve gained in my current role, can help me contribute effectively as a software developer. </p>
 								<ul class="about-info mt-4 px-md-0 px-2">
 									<li class="d-flex"><span>Profile:</span> <span>Software Engineer &amp; Devoloper</span></li>
@@ -352,14 +352,12 @@
 		<div class="row">
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date"> BDE Role </span>
-						<h2>Business Development Executive</h2>
+						<span class="date"> Softwere Developer </span>
+						<h2>Trainee Programmer (Programming – Web Developer)</h2>
 						<span class="position">Eclick Softwares and Solutions Pty Ltd</span>
-						<p class="mt-4"> • Learned and Implemented Freelancer’s Biding, Office Task Manager & Tracker Handling.
+						<p class="mt-4"> • Developed and maintained web applications using modern programming practices. Worked on front-end and back-end modules to deliver functional and responsive web solutions.
 							<ul>
-								<li> • Working on many Full Stack & various type of CMS Project like WordPress, Shopify, wix, Squarespace, SEO & deliver
-									the project as per client Satisfaction.</li>
-								<li> • ensuring client satisfaction and aligning with business objectives for sustained growth.</li>
+								<li> • Collaborated with team members to troubleshoot, debug, and optimize applications. Gained hands-on experience in software development lifecycle, including coding, testing, and deployment. Strengthened skills in PHP, MySQL, HTML, CSS, and database management. Ensured code quality and performance through continuous learning and adherence to company standards.</li>
 							</ul>
 						</p>
 					</div>
