--- a/index.html
+++ b/index.html
@@ -352,12 +352,12 @@
 		<div class="row">
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date"> Softwere Developer </span>
+						<span class="date"> Software Developer </span>
 						<h2>Trainee Programmer (Programming – Web Developer)</h2>
 						<span class="position">Eclick Softwares and Solutions Pty Ltd</span>
 						<p class="mt-4"> • Developed and maintained web applications using modern programming practices. Worked on front-end and back-end modules to deliver functional and responsive web solutions.
 							<ul>
-								<li> • Collaborated with team members to troubleshoot, debug, and optimize applications. Gained hands-on experience in software development lifecycle, including coding, testing, and deployment. Strengthened skills in PHP, MySQL, HTML, CSS, and database management. Ensured code quality and performance through continuous learning and adherence to company standards.</li>
+								<li> Collaborated with team members to troubleshoot, debug, and optimize applications. Gained hands-on experience in software development lifecycle, including coding, testing, and deployment. Strengthened skills in PHP, MySQL, HTML, CSS, and database management. Ensured code quality and performance through continuous learning and adherence to company standards.</li>
 							</ul>
 						</p>
 					</div>
