--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
 						<br>
 						<br>
-			            <h2>SOFTWERE ENGINEER</h2>
+			            <h2>SOFTWARE ENGINEER</h2>
 						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
 						<!-- <br> -->
 			            <p><a href="https://drive.google.com/file/d/1sBXSiWA9PIQKYEmQHcxsJlfGhVqyCFUJ/view?usp=sharing">Resume</a> 
