Update typing text and profile image in index.html

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 						// Create an array of typing text
 						const typingTexts = [
 						'SOFTWARE DEVELOPER  ',
-						'STUDENT  ',
+						'AI ENTHUSIAS  ',
 						'GOOD LEARNER ',
 						];
 
@@ -213,7 +213,7 @@
 								<div class="row">
 									<div class="col-sm-6 col-md-5">
 									  <div class="about-img">
-										<img src="images/Suman_2.png" class="img-fluid rounded b-shadow-a" alt="">
+										<img src="images/SumanBar Resume Photo.jpg" class="img-fluid rounded b-shadow-a" alt="">
 									  </div>
 									</div>
 									<!-- Details next to profile image -->
