--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 								<div class="row">
 									<div class="col-sm-6 col-md-5">
 									  <div class="about-img">
-										<img src="images/SumanBar Resume Photo.jpg" class="img-fluid rounded b-shadow-a" alt="">
+										<img src="images/Suman_1.png" class="img-fluid rounded b-shadow-a" alt="">
 									  </div>
 									</div>
 									<!-- Details next to profile image -->
