--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 										<p><span class="title-s">Name: </span> <span>Suman Bar</span></p>
 										<p><span class="title-s">Job Role: </span> <span>Software Engineer</span></p>
 										<p><span class="title-s">Experience: </span> <span>EntryLevel Web Developer</span></p>
-										<p><span class="title-s">Address: </span> <span>Kolkata, West Bengal, India</span></p>
+										<p><span class="title-s">Address: </span> <span> India</span></p>
 									  </div>
 									</div>
 								  </div>
